full guide bubble implementation - added all steps - logic to track progress - separate orbit help bubble logic

--- a/index.html
+++ b/index.html
@@ -16,14 +16,10 @@
 
     <div id="mode" class="controls closed">
       <div id="playback">
-        <div id="playbackHelp" class="bubble">
-          <div class="bubbleText">Press Space to pause</div>
-          <div class="bubbleArrow"></div>
-        </div>
         <div class="controlHeader">playback</div>
         <div class="controlPanel">
           <div id="playing" class="button" onclick="updateSetting(this.id, !this.value)">play/pause</div>
-          <div id="rewind" class="button" onclick="updateSetting(this.id, !this.value)" />reverse</div>
+          <div id="rewind" class="button" onclick="updateSetting(this.id, !this.value)" />rewind</div>
           <div class="slider speedControl spinMode twodig">
             <label for="spinSpeed"><div>speed</div><span></span></label>
             <input type="range" id="spinSpeed" min="0" max="99" step="1" oninput="updateSetting(this.id, this.value)" />
@@ -53,9 +49,8 @@
       </div>
 
       <div id="modes">
-        <div id="modeHelp" class="bubble">
-          <div class="bubbleText">Play with some of the sliders</div>
-          <div class="bubbleArrow"></div>
+        <div id="orbitBubble" class="bubble">
+          <div>Scroll or drag to move around, press +/- to zoom</div>
         </div>
         <div id="modeTabs">
           <div class="controlHeader" onclick="setMode('spin')">spin</div><!--
@@ -94,7 +89,7 @@
             <label for="transLength"><div>spread</div><span></span></label>
             <input type="range" id="transLength" min=".01" max=".5" step=".01" oninput="useModeSlider(this.id, this.value)" />
           </div>
-          <div id="loopTrans" class="button patternMode" onclick="updateSetting(this.id, !this.value)">loop</div>
+          <div id="loopTrans" class="button patternMode" onclick="toggleLoop()">loop</div>
           <div id="shortRotations" class="button patternMode" onclick="updateSetting(this.id, !this.value)">short</div>
           <div id="rotX" class="button patternMode" onclick="updateSetting(this.id, !this.value)">flip x</div>
           <div id="rotY" class="button patternMode" onclick="updateSetting(this.id, !this.value)">flip y</div>
@@ -136,34 +131,30 @@
       </div>
 
       <div id="presets">
-        <div id="presetHelp" class="bubble">
-          <div class="bubbleText">Try some presets</div>
-          <div class="bubbleArrow"></div>
-        </div>
         <div class="controlHeader">presets</div>
         <div class="controlPanel">
-          <div class="button spinMode" onclick="loadPreset('s1')">s1</div>
-          <div class="button spinMode" onclick="loadPreset('s2')">s2</div>
-          <div class="button spinMode" onclick="loadPreset('s3')">s3</div>
-          <div class="button spinMode" onclick="loadPreset('s4')">s4</div>
-          <div class="button patternMode" onclick="loadPreset('p1')">p1</div>
-          <div class="button patternMode" onclick="loadPreset('p2')">p2</div>
-          <div class="button patternMode" onclick="loadPreset('p3')">p3</div>
-          <div class="button patternMode" onclick="loadPreset('p4')">p4</div>
-          <div class="button patternMode" onclick="loadPreset('p5')">p5</div>
-          <div class="button orbitMode" onclick="loadPreset('o1')">o1</div>
-          <div class="button orbitMode" onclick="loadPreset('o2')">o2</div>
-          <div class="button orbitMode" onclick="loadPreset('o3')">o3</div>
-          <div class="button orbitMode" onclick="loadPreset('o4')">o4</div>
-          <div class="button orbitMode" onclick="loadPreset('o5')">o5</div>
-          <div class="button orbitMode" onclick="loadPreset('o6')">o6</div>
+          <div class="button spinMode" onclick="clickPreset('s1')">s1</div>
+          <div class="button spinMode" onclick="clickPreset('s2')">s2</div>
+          <div class="button spinMode" onclick="clickPreset('s3')">s3</div>
+          <div class="button spinMode" onclick="clickPreset('s4')">s4</div>
+          <div class="button patternMode" onclick="clickPreset('p1')">p1</div>
+          <div class="button patternMode" onclick="clickPreset('p2')">p2</div>
+          <div class="button patternMode" onclick="clickPreset('p3')">p3</div>
+          <div class="button patternMode" onclick="clickPreset('p4')">p4</div>
+          <div class="button patternMode" onclick="clickPreset('p5')">p5</div>
+          <div class="button orbitMode" onclick="clickPreset('o1')">o1</div>
+          <div class="button orbitMode" onclick="clickPreset('o2')">o2</div>
+          <div class="button orbitMode" onclick="clickPreset('o3')">o3</div>
+          <div class="button orbitMode" onclick="clickPreset('o4')">o4</div>
+          <div class="button orbitMode" onclick="clickPreset('o5')">o5</div>
+          <div class="button orbitMode" onclick="clickPreset('o6')">o6</div>
         </div>
       </div>
 
       <div id="color">
-        <div id="colorHelp" class="bubble">
-          <div class="bubbleText">Color presets at bottom</div>
-          <div class="bubbleArrow"></div>
+        <div id="bubble" class="bubble">
+          <div id="bubbleText">Play with some sliders</div>
+          <div id="bubbleArrow"></div>
         </div>
         <div class="controlHeader">color</div>
         <div class="controlPanel">
@@ -187,12 +178,12 @@
           </div>
           <input type="color" id="bgColor" onchange="updateSetting(this.id, this.value)" />
           <div id="colorPresets">
-            <div class="button" onclick="loadPreset('c1')">1</div>
-            <div class="button" onclick="loadPreset('c2')">2</div>
-            <div class="button" onclick="loadPreset('c3')">3</div>
-            <div class="button" onclick="loadPreset('c4')">4</div>
-            <div class="button" onclick="loadPreset('c5')">5</div>
-            <div class="button" onclick="loadPreset('c6')">6</div>
+            <div class="button" onclick="clickColorPreset('c1')">1</div>
+            <div class="button" onclick="clickColorPreset('c2')">2</div>
+            <div class="button" onclick="clickColorPreset('c3')">3</div>
+            <div class="button" onclick="clickColorPreset('c4')">4</div>
+            <div class="button" onclick="clickColorPreset('c5')">5</div>
+            <div class="button" onclick="clickColorPreset('c6')">6</div>
           </div>
         </div>
       </div>
@@ -204,7 +195,7 @@
     <script src="settings.js" type="text/javascript"></script>
     <script src="presets.js" type="text/javascript"></script>
     <script src="patterns.js" type="text/javascript"></script>
-    <script src="main.js" type="text/javascript"></script>
     <script src="input.js" type="text/javascript"></script>
+    <script src="main.js" type="text/javascript"></script>
   </body>
 </html>
