--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <div class="controlPanel">
           <div class="slider left spinMode">
             <label for="tileSize"><div>size</div><span></span></label>
-            <input type="range" id="tileSize" min="45" max="180" step="1" oninput="useModeSlider(this.id, this.value)" />
+            <input type="range" id="tileSize" min="40" max="180" step="1" oninput="useModeSlider(this.id, this.value)" />
           </div>
           <div class="slider right spinMode twodig">
             <label for="spinXSpeed"><div>flip x</div><span></span></label>
@@ -69,7 +69,7 @@
           <div class="button spinMode" onclick="clearSpinX()">clear</div>
           <div class="slider left spinMode">
             <label for="tileScale"><div>scale</div><span></span></label>
-            <input type="range" id="tileScale" min=".7" max="2.3" step=".02" oninput="useModeSlider(this.id, this.value)" />
+            <input type="range" id="tileScale" min=".6" max="2.3" step=".02" oninput="useModeSlider(this.id, this.value)" />
           </div>
           <div class="slider right spinMode twodig">
             <label for="spinYSpeed"><div>flip y</div><span></span></label>
@@ -103,7 +103,7 @@
           <div class="button patternMode trans" onclick="addTransition('cascade up')">/\</div>
           <div class="slider left patternMode">
             <label for="patTileScale"><div>scale</div><span></span></label>
-            <input type="range" id="patTileScale" min=".7" max="2" step=".02" oninput="useModeSlider(this.id, this.value)" />
+            <input type="range" id="patTileScale" min=".6" max="2" step=".02" oninput="useModeSlider(this.id, this.value)" />
           </div>
           <div class="button patternMode trans" onclick="addTransition('ltr')">-&gt;</div>
           <div class="button patternMode trans" onclick="addTransition('diamond')">&lt;&gt;</div>
@@ -137,6 +137,7 @@
           <div class="button spinMode" onclick="clickPreset('s2')">s2</div>
           <div class="button spinMode" onclick="clickPreset('s3')">s3</div>
           <div class="button spinMode" onclick="clickPreset('s4')">s4</div>
+          <div class="button spinMode" onclick="clickPreset('s5')">s5</div>
           <div class="button patternMode" onclick="clickPreset('p1')">p1</div>
           <div class="button patternMode" onclick="clickPreset('p2')">p2</div>
           <div class="button patternMode" onclick="clickPreset('p3')">p3</div>
